Add a vibecoded GUI for the server
No guarantees how well this actually works, I just spent a few hours prompting Copilot to do stuff.

--- a/ProcessTracer.Server/ProcessTracer.Server.csproj
+++ b/ProcessTracer.Server/ProcessTracer.Server.csproj
@@ -1,11 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <UseWPF>true</UseWPF>
+    <GenerateAppMain>false</GenerateAppMain>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishDir>../bin/server</PublishDir>
+    <AssemblyName>process-tracer-server</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Update="src\UI\App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="src\UI\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <XamlRuntime>Wpf</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="src\UI\App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <XamlRuntime>Wpf</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
 
 </Project>
