--- a/SpawnCamper.Client/CMakeLists.txt
+++ b/SpawnCamper.Client/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.31)
-project(process-tracer)
+project(SpawnCamper)
 
 set(CMAKE_CXX_STANDARD 23)
 
@@ -33,12 +33,12 @@ add_library(hook SHARED src/lib.cpp)
 # https://github.com/microsoft/Detours/wiki/OverviewHelpers
 target_link_options(hook PRIVATE "/export:DetourFinishHelperProcess,@1,NONAME")
 
-add_executable(process-tracer src/main.cpp)
-add_dependencies(process-tracer hook)
+add_executable(SpawnCamper src/main.cpp)
+add_dependencies(SpawnCamper hook)
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
     set_target_properties(hook PROPERTIES OUTPUT_NAME "hook64")
 elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-    set_target_properties(process-tracer PROPERTIES RUNTIME_OUTPUT_DIRECTORY ".")
+    set_target_properties(SpawnCamper PROPERTIES RUNTIME_OUTPUT_DIRECTORY ".")
     set_target_properties(hook PROPERTIES OUTPUT_NAME "hook32")
 endif()
